# Neural-Network

./: .gitignore  CMakeLists.txt  Color.h  DLog.h  Layer.h  LayerBoss.h  NetTemplates.h  Neuron.h  NeuronTypes.h  POSI.h  Paper-outline.readme  README.md  TestData.h  Utility.cpp  Utility.h
demo/: NeuralNet-demo  Utility.d  demo  makefile  sources.mk  subdir.mk
demo-source/: Demo.cpp
demo/demo-source/: Demo.d  subdir.mk
demo/research-run-source/: subdir.mk
research-run-debug/: makefile  objects.mk  research-run  sources.mk  subdir.mk
research-run-debug/research-run-source/: Research-Run.d  sha256.d  subdir.mk
research-run-debug/source/: subdir.mk
research-run-source/: Research-Run.cpp  sha256.cpp  sha256.h
